fix: code review for bug fixes and improvements.
Bugs Fixed (8)
.sort() mutates original arrays (cards.js:1171) - selectedOptionIndices.sort() and card.correct.sort() were mutating the source arrays. Fixed with spread copies and numeric comparator: [...arr].sort((a, b) => a - b).

MC checkbox double-toggle (cards.js:908) - Clicking directly on a checkbox triggered both the native toggle AND the parent's click handler, resulting in no change. Added e.target !== checkbox guard.

answeredCards index mismatch after shuffle (cards.js:1559) - reorganizeCardsByStudyMode() shuffled cards first, then used stale answeredCards indices. Fixed by building a cardAnswerMap before shuffling and rebuilding answeredCards after.

Deck checkbox IDs with special characters (cards.js:588) - Deck names with spaces/special chars created invalid HTML IDs. Replaced with sequential numeric IDs.

sanitizePlayerName double-encoding (sanitize.js:58) - Called sanitizeHTML() (which HTML-escapes) then applied a regex filter that stripped the & and ; from entities. Removed the sanitizeHTML call since the regex already strips all dangerous characters.

Unclosed </div> in option group template (qlash.js:307) - innerHTML had a stray </div> closing tag with no opening tag.

Unhandled promise in player timeout (qlash.js:1751) - Supabase update call in a non-async setInterval callback had no error handling. Added .then()/.catch().

Duplicate CSS height property (qlash.css:329) - height: 300px was immediately overridden by height: auto. Removed the redundant first declaration.

Security Fix (1)
innerHTML XSS in deck stats (cards.js:1392) - Deck names (from filenames) were injected into innerHTML unsanitized. Added sanitizeHTML() wrapper.
Improvements (7)
Replaced alert() with toast notifications (qlash.js:24) - showMessage() now creates an auto-dismissing toast overlay instead of blocking the UI with alert(). Added matching CSS in qlash.css.

Added Enter key support (cards.js:228) - Pressing Enter in the a

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; font-src 'self' https://cdnjs.cloudflare.com; base-uri 'self'; form-action 'self';">
     <meta name="referrer" content="no-referrer">
+    <link rel="manifest" href="manifest.json">
     <title>Wählen Sie Ihren Modus</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <style>
         /* General body and font size for better readability and mobile friendliness */
         body {
-            font-family: sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             font-size: 18px;
             margin: 0;
             padding: 0;
@@ -216,11 +217,11 @@
         </header>
 
         <div class="button-container">
-            <a href="#" onclick="triggerConfettiTo('cards.html')" class="choice-button study-button">
+            <a href="cards.html" id="study-btn" class="choice-button study-button">
                 <i class="fas fa-book-open"></i>
                 <span>Alleine lernen (Aufgabenkarten)</span>
             </a>
-            <a href="#" onclick="triggerConfettiTo('qlash.html')" class="choice-button quiz-button">
+            <a href="qlash.html" id="quiz-btn" class="choice-button quiz-button">
                 <i class="fas fa-gamepad"></i>
                 <span>Wissen testen (Multiplayer Quiz)</span>
             </a>
